--- a/lithium-cell-lines.html
+++ b/lithium-cell-lines.html
@@ -559,7 +559,7 @@
 
 <p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <span class="font-weight-bold">+91 9958795999 </span></p>
 
-<form action="enquiry.php" method="post">
+<form action="#" method="post">
 <p id="popupsuccessmsg"></p>
 <input type="hidden" name="enquiry_for" value="Enquiry For Contact Us">
 <input type="hidden" name="page_url" value="">
