--- a/index.html
+++ b/index.html
@@ -1835,7 +1835,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 <p class="send_p">If you have a urgent requirement please fill the form or dial contact number: <span class="font-weight-bold">+91 9958795999 </span></p>
 
-<form action="enquiry.php" method="post">
+<form action="#" method="post">
 <p id="popupsuccessmsg"></p>
 <input type="hidden" name="enquiry_for" value="Enquiry For Contact Us">
 <input type="hidden" name="page_url" value="">
