--- a/solar-cells.html
+++ b/solar-cells.html
@@ -9,7 +9,8 @@
 <meta name="description" content="Indygreen Technologies supplies high-quality solar cells designed for maximum efficiency, durability, and performance, enabling advanced solar PV module manufacturing and clean energy solutions." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar cells, PV cells, photovoltaic cells, high-efficiency solar cells, solar cell suppliers, solar energy solutions, solar PV manufacturing, Indygreen Technologies, monocrystalline solar cells, polycrystalline solar cells" />
+<meta name="keywords" content="solar cells, photovoltaic cells, high efficiency PV cells, mono PERC, TOPCon, IBC, HJT, solar module manufacturing, solar raw materials, photovoltaic cell supplier, certified solar cells, solar components Asia, solar cell manufacturer, PV cell supplier India, advanced solar technologies, renewable energy materials" />
+
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
