--- a/solar-glass.html
+++ b/solar-glass.html
@@ -9,7 +9,8 @@
 <meta name="description" content="Indygreen Technologies provides high-quality Solar Glass designed for photovoltaic modules, offering high transparency, durability, and efficiency for advanced solar PV production." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar glass, PV glass, photovoltaic glass, tempered solar glass, anti-reflective solar glass, solar module glass, solar panel glass suppliers, Indygreen Technologies, high transparency solar glass" />
+<meta name="keywords" content="solar glass, glass for solar panels, solar module glass, photovoltaic glass, BIPV glass, anti-reflective glass, ultra-clear glass" />
+
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
@@ -395,10 +396,39 @@
         <img src="img/solar-glass.png" alt="Solar Glass in India" title="Solar Glass in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
-        <h2><strong>Solar Glass</strong></h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic qui quae debitis amet et. Illum dolorem voluptas quae, excepturi dolorum ipsa ratione impedit culpa, soluta iure reiciendis tenetur eius accusantium, deleniti possimus sit sequi atque officia. Asperiores veniam voluptas quia modi deleniti eligendi culpa amet accusantium impedit, perferendis labore rerum fugit, ab eius commodi laudantium omnis atque quisquam alias. Repellendus nam similique tempore ut necessitatibus placeat doloremque ullam nesciunt asperiores adipisci officiis illo unde impedit itaque ipsam tenetur rem nostrum, accusamus rerum dolorum enim eveniet. Tempore facere ex perspiciatis magnam error doloribus libero nulla, pariatur corporis minus nobis, accusantium deleniti?</p>
+        <h2><strong>Solar Glass</strong></h2> <br>
+        <p>Indygreen Technologies provides high-performance patterned solar glass designed to enhance light transmission and reduce energy loss through absorption and reflection. Our solar glass incorporates advanced optical technology and an integrated anti-reflective (AR) coating, ensuring superior efficiency and durability for photovoltaic applications. Each product is developed to meet international standards for clarity, strength, and weather resistance, supporting consistent module performance in diverse environments. Through our strategic network of certified manufacturing partners across Asia—particularly in China and Southeast Asia—we maintain a reliable and efficient supply chain that guarantees quality, traceability, and on-time delivery. Indygreen Technologies focuses on delivering innovative materials that optimize solar energy output, enhance module longevity, and reduce production costs for solar manufacturers worldwide. By combining technical expertise with strong supplier relationships, we ensure every sheet of our patterned solar glass contributes to a more sustainable and high-performing solar ecosystem.</p>
     </div>
 </div>
+</div>
+<div class="container py-3">
+  <div class="cell-tech">
+    <h3>Technical Specifications</h3>
+
+    <div class="cell-list">
+      <p><strong>Available thicknesses:</strong> 4.0 mm | 3.2 mm | 2.0 mm</p>
+      <p><strong>Standard dimensions:</strong> 2272 mm x 1128 mm (custom sizes available upon request)</p>
+      <p><strong>Material:</strong> Low-iron glass, tempered for high mechanical strength</p>
+    </div>
+
+    <h3>Distinctive Features</h3>
+    <ul>
+      <li>Patterned structure that utilizes diffuse refraction to reduce light reflection and enhance solar transmission, even at varying angles of incidence.</li>
+      <li>Anti-reflective (AR) coating optimizes solar capture, increasing useful absorption.</li>
+      <li>Compliant with international quality and safety standards, ideal for both mono and bifacial photovoltaic modules.</li>
+    </ul>
+
+    <h3>Benefits for Photovoltaic Applications</h3>
+    <ul>
+      <li>Increased module energy efficiency thanks to higher light transmission.</li>
+      <li>Glass surface resistant to weathering and mechanical stresses due to tempering treatment.</li>
+      <li>Dimensional flexibility for custom integrations in innovative solar module designs.</li>
+    </ul>
+
+    <p>
+      Available for more detailed technical data or specific customizations on request.
+    </p>
+  </div>
 </div>
 
   <!-- Footer -->
