--- a/solar-junction-box.html
+++ b/solar-junction-box.html
@@ -9,7 +9,10 @@
 <meta name="description" content="Indygreen Technologies provides high-quality Solar Junction Boxes for PV modules, ensuring reliable electrical connectivity, safety, and long-lasting performance in solar panel systems." />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="solar junction box, PV junction box, solar panel junction box, photovoltaic junction box, solar module connectivity, PV module components, solar panel accessories, Indygreen Technologies" />
+<meta name="keywords" content="
+solar junction box, photovoltaic junction box, PV junction box supplier, solar panel junction box, IP68 solar junction box, MC4 junction box, high current PV junction box, heat dissipating junction box, chip-based junction box, 1500V DC junction box, low contact resistance junction box, UV resistant PV junction box, flame-retardant UL94-V0 junction box, waterproof PV junction box, custom cable length junction box, PV junction box with diodes, bifacial module junction box, mono module junction box, utility-scale junction box, residential solar junction box, junction box datasheet, junction box specifications, TUV certified PV junction box, IEC 62790 junction box, CE certified solar junction box, PV junction box OEM, PV junction box wholesale, solar junction box China supplier, solar junction box Southeast Asia, fast lead time junction box, PV junction box MOQ, MC4 pre-assembled junction box, PV module connection box, string connection junction box, corrosion resistant junction box, tin-plated copper terminals JB, potting compound junction box, cable gland PV junction box, IP68 MC4 connector set
+"/>
+
 
 <!-- Robots -->
 <meta name="robots" content="index, follow" />
