--- a/other-machines.html
+++ b/other-machines.html
@@ -3,7 +3,7 @@
 <head>
   <head>
 <!-- Title -->
-<title>Other Machines for Lithium Battery Production Lines | Indygreen Technologies</title>
+<title>Other Accessorial Machines for Lithium Battery Production Lines | Indygreen Technologies</title>
 
 <!-- Meta Description -->
 <meta name="description" content="Indygreen Technologies provides a range of other machines for lithium battery production lines — including auxiliary equipment, material handling, formation, and finishing solutions to support efficient battery assembly, testing, and sorting." />
@@ -15,7 +15,7 @@
 <link rel="canonical" href="https://www.indygreentech.com/other-machines.html" />
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Other Machines for Lithium Battery Production Lines | Indygreen Technologies" />
+<meta property="og:title" content="Other Accessorial Machines for Lithium Battery Production Lines | Indygreen Technologies" />
 <meta property="og:description" content="Comprehensive range of other machines supporting lithium battery production lines — including auxiliary equipment for assembly, testing, sorting, and formation processes." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.indygreentech.com/other-machines.html" />
@@ -24,7 +24,7 @@
 
 <!-- Twitter Card Meta Tags -->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Other Machines for Lithium Battery Production Lines | Indygreen Technologies" />
+<meta name="twitter:title" content="Other Accessorial Machines for Lithium Battery Production Lines | Indygreen Technologies" />
 <meta name="twitter:description" content="Range of auxiliary machines supporting lithium battery lines — improving efficiency, quality, and reliability in assembly, testing, and finishing processes." />
 <meta name="twitter:image" content="https://www.indygreentech.com/images/other-machines.png" />
 <meta name="twitter:site" content="@IndygreenTech" />
@@ -161,7 +161,7 @@
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 <ul class="dropdown-menu">
@@ -176,6 +176,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
+<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -205,7 +206,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Belt Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Separator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -298,7 +299,7 @@
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
+<li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
 <ul>
@@ -314,6 +315,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
+<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
 </ul>
 </li>
 <li>
@@ -335,7 +337,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Belt Separator">Belt Separator</a></li>
+<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -364,7 +366,7 @@
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Other Machines</h1>
+<h1 class="title text-white">Other Accessorial Machines</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
@@ -376,7 +378,7 @@
 <a title="Prismatic Batteries Lines" href="prismatic-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Prismatic Batteries Lines</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Other Machines</span>
+<span class="text-white">Other Accessorial Machines</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
