--- a/sitemap.html
+++ b/sitemap.html
@@ -207,7 +207,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Belt Separator">Belt Separator</a></li>
+<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
