--- a/lithium-battery-raw-material.html
+++ b/lithium-battery-raw-material.html
@@ -159,7 +159,7 @@
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 <ul class="dropdown-menu">
@@ -174,6 +174,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
+<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -203,7 +204,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Belt Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Separator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -292,7 +293,7 @@
 <!-- Three -->
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
+<li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
 <ul>
@@ -308,6 +309,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
+<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
 </ul>
 </li>
 <li>
@@ -328,7 +330,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Belt Separator">Belt Separator</a></li>
+<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -402,6 +404,21 @@
           <div>
             <h5 class="card-title">BMS</h5>
             <p class="card-text text-muted">A BMS is a key component in lithium batteries, ensuring safety, monitoring performance, and extending battery life.</p>
+          </div>
+          <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card 3 -->
+     <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <a href="#" title="LIB Seperator Film in India"><img src="img/lib-seperator-film.png" class="card-img-top product-img" alt="LIB Seperator Film in India" title="LIB Seperator Film in India"></a>
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title">LIB Seperator Film</h5>
+            <p class="card-text text-muted">High-performance lithium-ion battery separator ensuring excellent ion conductivity, thermal stability, and superior safety for efficient energy storage.</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
