--- a/lithium-cell-raw-materials.html
+++ b/lithium-cell-raw-materials.html
@@ -161,7 +161,7 @@
 </a></li>
 <li class="nav-item mr-0"><a href="battery-pack-testers.html" title="Battery Pack Testers" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Pack Testers
 </a></li>
-<li class="nav-item mr-0"><a href="other-machines.html" title="Other Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Machines
+<li class="nav-item mr-0"><a href="other-machines.html" title="Other Accessorial Machines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Other Accessorial Machines
 </a></li>
 <li class="nav-item mr-0"><a href="battery-quality-test-lab.html" title="Battery Quality Test Lab" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Quality Test Lab</a>
 <ul class="dropdown-menu">
@@ -176,6 +176,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
 <li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
+<li class="nav-item mr-0"><a href="lib-seperator-film.html" title="LIB Seperator Film" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> LIB Seperator Film</a></li>
 </ul>
 </li>
 <li class="nav-item mr-0"><a href="bess-cooling-system.html" title="BESS Cooling System" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BESS Cooling System
@@ -205,7 +206,7 @@
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="copper-foil.html" title="Copper Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Copper Foil </a></li>
 <li class="nav-item mr-0"><a href="aluminum-foil.html" title="Aluminum Foil" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Aluminum Foil</a></li>
-<li class="nav-item mr-0"><a href="belt-separator.html" title="Belt Separator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Belt Separator</a></li>
+<li class="nav-item mr-0"><a href="belt-separator.html" title="Battery Seperator" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Battery Seperator</a></li>
 <li class="nav-item mr-0"><a href="electrolyte.html" title="Electrolyte" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Electrolyte</a></li>
 <li class="nav-item mr-0"><a href="casing.html" title="Casing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Casing</a></li>
 </ul>
@@ -298,7 +299,7 @@
 
 <li><a href="bess-container-assembly-lines.html" title="BESS Container Assembly Lines">BESS Container Assembly Lines</a></li>
 <li><a href="battery-pack-testers.html" title="Battery Pack Testers">Battery Pack Testers</a></li>
-<li><a href="other-machines.html" title="Other Machines">Other Machines</a></li>
+<li><a href="other-machines.html" title="Other Accessorial Machines">Other Accessorial Machines</a></li>
 <li>
 <a href="battery-quality-test-lab.html" title="Battery Quality Test Lab">Battery Quality Test Lab</a>
 <ul>
@@ -314,6 +315,7 @@
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
 <li><a href="bms-tester.html" title="BMS">BMS</a></li>
+<li><a href="lib-seperator-film.html" title="LIB Seperator Film">LIB Seperator Film</a></li>
 </ul>
 </li>
 <li>
@@ -335,7 +337,7 @@
 <ul>
 <li><a href="copper-foil.html" title="Copper Foil">Copper Foil</a></li>
 <li><a href="aluminum-foil.html" title="Aluminum Foil">Aluminum Foil</a></li>
-<li><a href="belt-separator.html" title="Belt Separator">Belt Separator</a></li>
+<li><a href="belt-separator.html" title="Battery Seperator">Battery Seperator</a></li>
 <li><a href="electrolyte.html" title="Electrolyte">Electrolyte</a></li>
 <li><a href="casing.html" title="Casing">Casing</a></li>
 </ul>
@@ -421,11 +423,11 @@
     <!-- Card 3 -->
      <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="belt-separator.html" title="Belt Separator in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Belt Separator in India" title="Belt Separator in India"></a>
+        <a href="belt-separator.html" title="Battery Seperator in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Battery Seperator in India" title="Battery Seperator in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Belt Separator</h5>
-            <p class="card-text text-muted">High-precision Belt Separators for lithium-ion batteries, ensuring uniform coating, smooth winding, and reliable insulation. Ideal for EV, ESS, and advanced battery manufacturing.</p>
+            <h5 class="card-title">Battery Seperator</h5>
+            <p class="card-text text-muted">High-precision Battery Seperators for lithium-ion batteries, ensuring uniform coating, smooth winding, and reliable insulation. Ideal for EV, ESS, and advanced battery manufacturing.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-custom" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
